; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/ypldap/extr_aldap.c_aldap_get_dn.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/ypldap/extr_aldap.c_aldap_get_dn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.aldap_message = type { i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @aldap_get_dn(%struct.aldap_message* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.aldap_message*, align 8
  %4 = alloca i8*, align 8
  store %struct.aldap_message* %0, %struct.aldap_message** %3, align 8
  %5 = load %struct.aldap_message*, %struct.aldap_message** %3, align 8
  %6 = getelementptr inbounds %struct.aldap_message, %struct.aldap_message* %5, i32 0, i32 0
  %7 = load i32*, i32** %6, align 8
  %8 = icmp eq i32* %7, null
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store i8* null, i8** %2, align 8
  br label %20

10:                                               ; preds = %1
  %11 = load %struct.aldap_message*, %struct.aldap_message** %3, align 8
  %12 = getelementptr inbounds %struct.aldap_message, %struct.aldap_message* %11, i32 0, i32 0
  %13 = load i32*, i32** %12, align 8
  %14 = call i32 @ber_get_string(i32* %13, i8** %4)
  %15 = icmp eq i32 %14, -1
  br i1 %15, label %16, label %17

16:                                               ; preds = %10
  store i8* null, i8** %2, align 8
  br label %20

17:                                               ; preds = %10
  %18 = load i8*, i8** %4, align 8
  %19 = call i8* @utoa(i8* %18)
  store i8* %19, i8** %2, align 8
  br label %20

20:                                               ; preds = %17, %16, %9
  %21 = load i8*, i8** %2, align 8
  ret i8* %21
}

declare dso_local i32 @ber_get_string(i32*, i8**) #1

declare dso_local i8* @utoa(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
